ARROW-10192: [Python] Always decode inner dictionaries when converting array to Pandas

Fix a crash on conversion of e.g. struct of dictionaries.

Closes #8361 from pitrou/ARROW-10192-struct-of-dict

Lead-authored-by: Antoine Pitrou <antoine@python.org>
Co-authored-by: Krisztián Szűcs <szucs.krisztian@gmail.com>
Signed-off-by: Krisztián Szűcs <szucs.krisztian@gmail.com>